2010-09-10  Adam Barth  <abarth@webkit.org>

Reviewed by Darin Adler.

        REGRESSION (HTML Parser): CNN's Money site is not formatted correctly with AdBlock installed
        https://bugs.webkit.org/show_bug.cgi?id=41371

        Drop support for closing comments with "-- >".  This was an attempt to
        be more IE-like in comment parsing, but it turns out to cause problems
        for some high-profile sites.  Firefox 4 is dropping support as well.
        We expect the spec to change soon too.

        * html/parser/HTMLTokenizer.cpp:
        (WebCore::HTMLTokenizer::nextToken):
        * html/parser/HTMLTokenizer.h:
2010-09-10  Adam Barth  <abarth@webkit.org>

        Reviewed by Darin Adler.

        REGRESSION (HTML Parser): CNN's Money site is not formatted correctly with AdBlock installed
        https://bugs.webkit.org/show_bug.cgi?id=41371

        Update test results for new behavior.

        * fast/parser/comments-expected.txt:
        * fast/parser/comments.html:
          - Removed the redundant in-test expectations.
        * html5lib/runner-expected.txt:
          - We now "fail" these two tests.  We'll pass them again once the spec
            changes and HTML5lib updates its expectations.


Canonical link: https://commits.webkit.org/57969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67233 268f45cc-cd09-0410-ab3c-d52691b4dbfc